Preethi, Gaurav | #2378 | Upgraded mockito api